2018-11-26  Zalan Bujtas  <zalan@apple.com>

        Unreviewed rebaseline after r238460.

        * platform/ios/fast/inline/inline-content-with-image-simple-expected.txt: Added.

2018-11-25  Zalan Bujtas  <zalan@apple.com>

        [LFC][IFC] Use float box's margin box to adjust the line constraints.
        https://bugs.webkit.org/show_bug.cgi?id=191961

        Reviewed by Antti Koivisto.

        * fast/inline/inline-content-with-float-and-margin-expected.txt: Added.
        * fast/inline/inline-content-with-float-and-margin.html: Added.

2018-11-26  Manuel Rego Casasnovas  <rego@igalia.com>

        [css-grid] Fix grid container sizing under min-content height
        https://bugs.webkit.org/show_bug.cgi?id=191889

        Reviewed by Javier Fernandez.

        Update tests results to the new behavior.
        Also modified a little bit the test to keep them in sync with Blink versions.

        * fast/css-grid-layout/grid-track-sizing-with-orthogonal-flows-expected.txt:
        * fast/css-grid-layout/grid-track-sizing-with-orthogonal-flows.html:
        * fast/css-grid-layout/maximize-tracks-definite-indefinite-height.html:

2018-11-25  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed test gardening, rebaseline webgpu/queue-creation.html.

        * webgpu/queue-creation-expected.txt:

2018-11-25  Tim Horton  <timothy_horton@apple.com>

        Make it possible to insert editable images with a gesture
        https://bugs.webkit.org/show_bug.cgi?id=191937

        Reviewed by Wenson Hsieh.

        * editing/images/basic-editable-image-from-execCommand-expected.txt: Added.
        * editing/images/basic-editable-image-from-execCommand.html: Added.
        Add a test that ensures that editable images also work when
        inserted via the editor command.

        * editing/images/redo-insert-editable-image-maintains-strokes-expected.txt: Added.
        * editing/images/redo-insert-editable-image-maintains-strokes.html: Added.